--- a/package.json
+++ b/package.json
@@ -8,7 +8,35 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/free-regular-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@testing-library/jest-dom": "^5.17.0",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@tinymce/tinymce-react": "^4.3.0",
+    "@tippyjs/react": "^4.2.6",
+    "axios": "^1.5.1",
+    "bootstrap": "^5.3.1",
+    "classnames": "^2.3.2",
+    "clipboard-copy": "^4.0.1",
+    "file-saver": "^2.0.5",
+    "js-cookie": "^3.0.5",
+    "normalize.css": "^8.0.1",
+    "react": "^18.2.0",
+    "react-click-outside": "^3.0.1",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.1.2",
+    "react-responsive": "^9.0.2",
+    "react-router-dom": "^6.16.0",
+    "react-scripts": "5.0.1",
+    "react-slick": "^0.29.0",
+    "redux": "^4.2.1",
+    "slick-carousel": "^1.8.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
